01 - OpenCRVS Documentation/v1.3/product-specifications/core-functions/2.-declare-event.md
---
title: "2. Declare event"
source_url: "https://documentation.opencrvs.org/v1.3/product-specifications/core-functions/2.-declare-event"
markdown_url: "https://documentation.opencrvs.org/v1.3/product-specifications/core-functions/2.-declare-event.md"
version: "v1.3"
retrieved_at: "2026-09-16T15:06:42Z"
content_hash: "sha256:f577e07e84acf311ea14625a9f35bd05760b21f92aa5b35e1c2b9f8255763f00"
---

> For the complete documentation index, see [llms.txt](https://documentation.opencrvs.org/llms.txt). Markdown versions of documentation pages are available by appending `.md` to page URLs; this page is available as [Markdown](https://documentation.opencrvs.org/v1.3/product-specifications/core-functions/2.-declare-event.md).

# 2. Declare event

A vital event declaration is the submission of the details of the occurrence and characteristics of the vital event as outlined in law, for the purpose of civil registration.

In OpenCRVS a declaration can be completed on any device such as a mobile or desktop and can be completed offline for submission once the user has reconnected.

### **Configuration options:**

* Add custom text input
* Add custom number input
* Add custom select input
* Show/hide default fields (some default fields are mandatory such as Child’s date of birth)
* Set 1 or 2 address for Mother, Father, Informant, Deceased
* Enabled/disabled partial date of births (Age in years)
* Enabled/disabled informant signature capture
* Enabled/disabled declaration introduction page
* Add National ID validation and declaration pre-population (National ID integration required eg. MOSIP)
* On/off send SMS notification to informant with tracking ID

### **Pre-condition**

A vital event has occurred such as a birth, death or marriage.

### **Triggers**

An informant has requested they want to declare a vital event.

### **Standard flow**

1. User click new declaration button ‘Plus button’ in the
2. User selects event type
3. User selects informant type
4. User selects main-point of contact and enters phone number
5. User completes declaration form
   1. Birth declaration form for Farajaland
   2. Death declaration form for Farajaland
   3. Marriage declaration form for Farajaland
6. User uploads or takes a photo of supporting documents
7. User reviews all the details captured in the form against the supporting documents
8. User can choose to add any comments
9. User is prompted to capture the informant digital signature
10. Once all mandatory fields have been completed that are required for registration. Then depending on who has started and is completing the declaration there are different actions on the review page:
    * If Field Agent → Send for review
    * If Registration Agent → Send for approval
    * If Registrar → Register
11. User is prompted to confirm their action
12. On confirming, declaration is sent to the Outbox for processing
13. Once processed the declaration status is updated and sent to the appropriate workqueue depending on who declared the declaration and the action performed on it.

### **Post conditions**

* Declaration is sent to the appropriate users workqueue
  1. If Sent for review → Goes to the Registrar and Registration Agents Ready to review workqueue
  2. If Sent for approval → Goes to the Registrar Ready to review workqueue
  3. If Registrar → Goes to the Ready to print workqueue
* Record audit is updated to log the action performed on the declaration
* Informant receives sms notification with tracking ID if ‘Sent for review’ by Field Agent
* Informant receives sms notification with tracking ID and Registration number if ‘Registered’ by Registrar

### **Variations/Exceptions**

* If the user has no connection. Then the declaration will go to their Outbox. Once reconnected the declaration will be processed and sent.

{% embed url="<https://www.loom.com/share/23a63ff5306a4efc9dfe6294a27956ff?sid=ff8d394b-dcc0-4729-9a07-ec3545512798>" %}


---

# Agent Instructions
This documentation is published with GitBook. GitBook is the documentation platform designed so that both humans and AI agents can read, navigate, and reason over technical content effectively. Learn more at gitbook.com.

## Querying This Documentation
If you need additional information that is not directly available in this page, you can query the documentation dynamically by asking a question.

Perform an HTTP GET request on the current page URL with the `ask` query parameter, and the optional `goal` query parameter:

```
GET https://documentation.opencrvs.org/v1.3/product-specifications/core-functions/2.-declare-event.md?ask=<question>&goal=<endgoal>
```

`ask` is the immediate question: it should be specific, self-contained, and written in natural language.
`goal` is optional and describes the broader end goal you are ultimately trying to accomplish on behalf of the user. GitBook uses it to tailor the answer towards what is most useful for that goal.

The response will contain a direct answer to the question and relevant excerpts and sources from the documentation.

Use this mechanism when the answer is not explicitly present in the current page, you need clarification or additional context, or you want to retrieve related documentation sections.
